# data-analysis-agent

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  run.py
agents/: graph.py  nodes.py  state.py
backend/: main.py
backend/agents/: few_shot.py  graph.py  nodes.py  state.py
backend/api/: routes.py
backend/core/: config.py  model.py
backend/prompts/: nl2sql.txt
backend/tools/: pandas_tool.py  sql_tool.py
backend/utils/: __init__.py  logger.py
core/: model.py
prompts/: analysis.txt  data_understanding.txt  insight.txt
sample_data/: superstore_sales.csv
schemas/: agent.py
tools/: metrics.py  pandas_tool.py  session_store.py  sql_tool.py
utils/: __init__.py  logger.py
